wwpdb/utils/nmr/cpp_src/CyanaNOAParser.cpp

// Generated from /data/git/py-wwpdb_utils_nmr/wwpdb/utils/tests-nmr/antlr-grammars-v4.10/CyanaNOAParser.g4 by ANTLR 4.13.2


#include "CyanaNOAParserVisitor.h"

#include "CyanaNOAParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CyanaNOAParserStaticData final {
  CyanaNOAParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CyanaNOAParserStaticData(const CyanaNOAParserStaticData&) = delete;
  CyanaNOAParserStaticData(CyanaNOAParserStaticData&&) = delete;
  CyanaNOAParserStaticData& operator=(const CyanaNOAParserStaticData&) = delete;
  CyanaNOAParserStaticData& operator=(CyanaNOAParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cyananoaparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CyanaNOAParserStaticData> cyananoaparserParserStaticData = nullptr;

void cyananoaparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cyananoaparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(cyananoaparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CyanaNOAParserStaticData>(
    std::vector<std::string>{
      "cyana_noa", "comment", "noe_peaks", "peak_header", "peak_quality", 
      "noe_assignments", "noe_assignment", "numerical_report", "extended_report", 
      "noe_stat", "list_of_proton", "peak_stat"
    },
    std::vector<std::string>{
      "", "'|i-j|'", "'from'", "'ppm;'", "'increased from'", "'|i-j|'", 
      "'diagonal'", "'out of'", "", "'quality'", "'OK'", "'lone'", "'poor'", 
      "'far'", "", "'Violated in'", "'structures by'", "'Average quality of peak assignments'", 
      "'Average number of used assignments'", "'Peaks with increased upper limit'", 
      "'Peaks with decreased upper limit'", "'Protons used in less than 30% of expected peaks'", 
      "'Peak observation distance'", "'Atom'", "'Residue'", "'Peaks'", "'Shift'", 
      "'Used'", "'Expect'", "'selected'", "'assigned'", "'unassigned'", 
      "'without assignment possibility'", "'with violation below'", "'with violation between'", 
      "'with violation above'", "'with diagonal assignment'", "'and'", "'Cross peaks'", 
      "'with off-diagonal assignment'", "'with unique assignment'", "'with short-range assignment'", 
      "'with medium-range assignment'", "'with long-range assignment'", 
      "", "'1<|i-j|<5'", "", "'('", "')'", "':'", "'.'", "','", "'='", "'+'", 
      "'-'", "'/'"
    },
    std::vector<std::string>{
      "", "Peak", "From", "Ppm_SC", "Increased_from", "Decreased_from", 
      "Diagonal", "Out_of", "Assignments_used", "Quality", "Ok", "Lone", 
      "Poor", "Far", "Distance_range", "Violated_in", "Structures_by", "Average_quality", 
      "Average_number", "Peaks_inc_upl", "Peaks_dec_upl", "Protons_used_in_less", 
      "Peak_obs_dist", "Atom", "Residue", "Peaks", "Shift", "Used", "Expect", 
      "Selected", "Assigned", "Unassigned", "Without_possibility", "With_viol_below", 
      "With_viol_between", "With_viol_above", "With_diagonal", "And", "Cross_peaks", 
      "With_off_diagonal", "With_unique", "With_short_range", "With_medium_range", 
      "With_long_range", "Short_range_ex", "Medium_range_ex", "Long_range_ex", 
      "L_paren", "R_paren", "Colon", "Period", "Comma", "Equ_op", "Add_op", 
      "Sub_op", "Div_op", "Angstrome", "Integer", "Float", "Numerical_report1", 
      "Numerical_report2", "Numerical_report3", "Numerical_report4", "COMMENT", 
      "Simple_name", "SPACE", "ENCLOSE_COMMENT", "SECTION_COMMENT", "LINE_COMMENT", 
      "File_name", "SPACE_FN", "Any_name", "SPACE_CM", "RETURN_CM"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cyananoaparserParserStaticData = std::move(staticData);
}

}

CyanaNOAParser::CyanaNOAParser(TokenStream *input) : CyanaNOAParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CyanaNOAParser::CyanaNOAParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CyanaNOAParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cyananoaparserParserStaticData->atn, cyananoaparserParserStaticData->decisionToDFA, cyananoaparserParserStaticData->sharedContextCache, options);
}

CyanaNOAParser::~CyanaNOAParser() {
  delete _interpreter;
}

const atn::ATN& CyanaNOAParser::getATN() const {
  return *cyananoaparserParserStaticData->atn;
}

std::string CyanaNOAParser::getGrammarFileName() const {
  return "CyanaNOAParser.g4";
}

const std::vector<std::string>& CyanaNOAParser::getRuleNames() const {
  return cyananoaparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CyanaNOAParser::getVocabulary() const {
  return cyananoaparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CyanaNOAParser::getSerializedATN() const {
  return cyananoaparserParserStaticData->serializedATN;
}


//----------------- Cyana_noaContext ------------------------------------------------------------------

CyanaNOAParser::Cyana_noaContext::Cyana_noaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CyanaNOAParser::Cyana_noaContext::EOF() {
  return getToken(CyanaNOAParser::EOF, 0);
}

std::vector<CyanaNOAParser::CommentContext *> CyanaNOAParser::Cyana_noaContext::comment() {
  return getRuleContexts<CyanaNOAParser::CommentContext>();
}

CyanaNOAParser::CommentContext* CyanaNOAParser::Cyana_noaContext::comment(size_t i) {
  return getRuleContext<CyanaNOAParser::CommentContext>(i);
}

std::vector<CyanaNOAParser::Noe_peaksContext *> CyanaNOAParser::Cyana_noaContext::noe_peaks() {
  return getRuleContexts<CyanaNOAParser::Noe_peaksContext>();
}

CyanaNOAParser::Noe_peaksContext* CyanaNOAParser::Cyana_noaContext::noe_peaks(size_t i) {
  return getRuleContext<CyanaNOAParser::Noe_peaksContext>(i);
}

std::vector<CyanaNOAParser::Noe_statContext *> CyanaNOAParser::Cyana_noaContext::noe_stat() {
  return getRuleContexts<CyanaNOAParser::Noe_statContext>();
}

CyanaNOAParser::Noe_statContext* CyanaNOAParser::Cyana_noaContext::noe_stat(size_t i) {
  return getRuleContext<CyanaNOAParser::Noe_statContext>(i);
}

std::vector<CyanaNOAParser::Peak_statContext *> CyanaNOAParser::Cyana_noaContext::peak_stat() {
  return getRuleContexts<CyanaNOAParser::Peak_statContext>();
}

CyanaNOAParser::Peak_statContext* CyanaNOAParser::Cyana_noaContext::peak_stat(size_t i) {
  return getRuleContext<CyanaNOAParser::Peak_statContext>(i);
}


size_t CyanaNOAParser::Cyana_noaContext::getRuleIndex() const {
  return CyanaNOAParser::RuleCyana_noa;
}


std::any CyanaNOAParser::Cyana_noaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CyanaNOAParserVisitor*>(visitor))
    return parserVisitor->visitCyana_noa(this);
  else
    return visitor->visitChildren(this);
}

CyanaNOAParser::Cyana_noaContext* CyanaNOAParser::cyana_noa() {
  Cyana_noaContext *_localctx = _tracker.createInstance<Cyana_noaContext>(_ctx, getState());
  enterRule(_localctx, 0, CyanaNOAParser::RuleCyana_noa);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -9223372036821090302) != 0)) {
      setState(28);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CyanaNOAParser::COMMENT: {
          setState(24);
          comment();
          break;
        }

        case CyanaNOAParser::Peak: {
          setState(25);
          noe_peaks();
          break;
        }

        case CyanaNOAParser::Average_quality: {
          setState(26);
          noe_stat();
          break;
        }

        case CyanaNOAParser::Peaks: {
          setState(27);
          peak_stat();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(32);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(33);
    match(CyanaNOAParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

CyanaNOAParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CyanaNOAParser::CommentContext::COMMENT() {
  return getToken(CyanaNOAParser::COMMENT, 0);
}

tree::TerminalNode* CyanaNOAParser::CommentContext::RETURN_CM() {
  return getToken(CyanaNOAParser::RETURN_CM, 0);
}

tree::TerminalNode* CyanaNOAParser::CommentContext::EOF() {
  return getToken(CyanaNOAParser::EOF, 0);
}

std::vector<tree::TerminalNode *> CyanaNOAParser::CommentContext::Any_name() {
  return getTokens(CyanaNOAParser::Any_name);
}

tree::TerminalNode* CyanaNOAParser::CommentContext::Any_name(size_t i) {
  return getToken(CyanaNOAParser::Any_name, i);
}


size_t CyanaNOAParser::CommentContext::getRuleIndex() const {
  return CyanaNOAParser::RuleComment;
}


std::any CyanaNOAParser::CommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CyanaNOAParserVisitor*>(visitor))
    return parserVisitor->visitComment(this);
  else
    return visitor->visitChildren(this);
}

CyanaNOAParser::CommentContext* CyanaNOAParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 2, CyanaNOAParser::RuleComment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    match(CyanaNOAParser::COMMENT);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CyanaNOAParser::Any_name) {
      setState(36);
      match(CyanaNOAParser::Any_name);
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    _la = _input->LA(1);
    if (!(_la == CyanaNOAParser::EOF || _la == CyanaNOAParser::RETURN_CM)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Noe_peaksContext ------------------------------------------------------------------

CyanaNOAParser::Noe_peaksContext::Noe_peaksContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CyanaNOAParser::Peak_headerContext* CyanaNOAParser::Noe_peaksContext::peak_header() {
  return getRuleContext<CyanaNOAParser::Peak_headerContext>(0);
}

CyanaNOAParser::Peak_qualityContext* CyanaNOAParser::Noe_peaksContext::peak_quality() {
  return getRuleContext<CyanaNOAParser::Peak_qualityContext>(0);
}

CyanaNOAParser::Noe_assignmentsContext* CyanaNOAParser::Noe_peaksContext::noe_assignments() {
  return getRuleContext<CyanaNOAParser::Noe_assignmentsContext>(0);
}


size_t CyanaNOAParser::Noe_peaksContext::getRuleIndex() const {
  return CyanaNOAParser::RuleNoe_peaks;
}


std::any CyanaNOAParser::Noe_peaksContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CyanaNOAParserVisitor*>(visitor))
    return parserVisitor->visitNoe_peaks(this);
  else
    return visitor->visitChildren(this);
}

CyanaNOAParser::Noe_peaksContext* CyanaNOAParser::noe_peaks() {
  Noe_peaksContext *_localctx = _tracker.createInstance<Noe_peaksContext>(_ctx, getState());
  enterRule(_localctx, 4, CyanaNOAParser::RuleNoe_peaks);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    peak_header();
    setState(45);
    peak_quality();
    setState(47);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CyanaNOAParser::Simple_name) {
      setState(46);
      noe_assignments();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Peak_headerContext ------------------------------------------------------------------

CyanaNOAParser::Peak_headerContext::Peak_headerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Peak() {
  return getToken(CyanaNOAParser::Peak, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Integer() {
  return getToken(CyanaNOAParser::Integer, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::From() {
  return getToken(CyanaNOAParser::From, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::File_name() {
  return getToken(CyanaNOAParser::File_name, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::L_paren() {
  return getToken(CyanaNOAParser::L_paren, 0);
}

std::vector<tree::TerminalNode *> CyanaNOAParser::Peak_headerContext::Float() {
  return getTokens(CyanaNOAParser::Float);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Float(size_t i) {
  return getToken(CyanaNOAParser::Float, i);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Comma() {
  return getToken(CyanaNOAParser::Comma, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Ppm_SC() {
  return getToken(CyanaNOAParser::Ppm_SC, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::R_paren() {
  return getToken(CyanaNOAParser::R_paren, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Colon() {
  return getToken(CyanaNOAParser::Colon, 0);
}

std::vector<tree::TerminalNode *> CyanaNOAParser::Peak_headerContext::Angstrome() {
  return getTokens(CyanaNOAParser::Angstrome);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Angstrome(size_t i) {
  return getToken(CyanaNOAParser::Angstrome, i);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Diagonal() {
  return getToken(CyanaNOAParser::Diagonal, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Increased_from() {
  return getToken(CyanaNOAParser::Increased_from, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_headerContext::Decreased_from() {
  return getToken(CyanaNOAParser::Decreased_from, 0);
}


size_t CyanaNOAParser::Peak_headerContext::getRuleIndex() const {
  return CyanaNOAParser::RulePeak_header;
}


std::any CyanaNOAParser::Peak_headerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CyanaNOAParserVisitor*>(visitor))
    return parserVisitor->visitPeak_header(this);
  else
    return visitor->visitChildren(this);
}

CyanaNOAParser::Peak_headerContext* CyanaNOAParser::peak_header() {
  Peak_headerContext *_localctx = _tracker.createInstance<Peak_headerContext>(_ctx, getState());
  enterRule(_localctx, 6, CyanaNOAParser::RulePeak_header);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(CyanaNOAParser::Peak);
    setState(50);
    match(CyanaNOAParser::Integer);
    setState(51);
    match(CyanaNOAParser::From);
    setState(52);
    match(CyanaNOAParser::File_name);
    setState(53);
    match(CyanaNOAParser::L_paren);
    setState(54);
    match(CyanaNOAParser::Float);
    setState(55);
    match(CyanaNOAParser::Comma);
    setState(56);
    match(CyanaNOAParser::Float);
    setState(57);
    match(CyanaNOAParser::Ppm_SC);
    setState(63);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(58);
      match(CyanaNOAParser::Angstrome);
      break;
    }

    case 2: {
      setState(59);
      match(CyanaNOAParser::Angstrome);
      setState(60);
      _la = _input->LA(1);
      if (!(_la == CyanaNOAParser::Increased_from

      || _la == CyanaNOAParser::Decreased_from)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(61);
      match(CyanaNOAParser::Angstrome);
      break;
    }

    case 3: {
      setState(62);
      match(CyanaNOAParser::Diagonal);
      break;
    }

    default:
      break;
    }
    setState(65);
    match(CyanaNOAParser::R_paren);
    setState(66);
    match(CyanaNOAParser::Colon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Peak_qualityContext ------------------------------------------------------------------

CyanaNOAParser::Peak_qualityContext::Peak_qualityContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CyanaNOAParser::Peak_qualityContext::Integer() {
  return getTokens(CyanaNOAParser::Integer);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Integer(size_t i) {
  return getToken(CyanaNOAParser::Integer, i);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Out_of() {
  return getToken(CyanaNOAParser::Out_of, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Assignments_used() {
  return getToken(CyanaNOAParser::Assignments_used, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Comma() {
  return getToken(CyanaNOAParser::Comma, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Quality() {
  return getToken(CyanaNOAParser::Quality, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Equ_op() {
  return getToken(CyanaNOAParser::Equ_op, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Float() {
  return getToken(CyanaNOAParser::Float, 0);
}

tree::TerminalNode* CyanaNOAParser::Peak_qualityContext::Colon() {
  return getToken(CyanaNOAParser::Colon, 0);
}


size_t CyanaNOAParser::Peak_qualityContext::getRuleIndex() const {
  return CyanaNOAParser::RulePeak_quality;
}


std::any CyanaNOAParser::Peak_qualityContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CyanaNOAParserVisitor*>(visitor))
    return parserVisitor->visitPeak_quality(this);
  else
    return visitor->visitChildren(this);
}

CyanaNOAParser::Peak_qualityContext* CyanaNOAParser::peak_quality() {
  Peak_qualityContext *_localctx = _tracker.createInstance<Peak_qualityContext>(_ctx, getState());
  enterRule(_localctx, 8, CyanaNOAParser::RulePeak_quality);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(CyanaNOAParser::Integer);
    setState(69);
    match(CyanaNOAParser::Out_of);
    setState(70);
    match(CyanaNOAParser::Integer);
    setState(71);
    match(CyanaNOAParser::Assignments_used);
    setState(72);
    match(CyanaNOAParser::Comma);
    setState(73);
    match(CyanaNOAParser::Quality);
    setState(74);
    match(CyanaNOAParser::Equ_op);
    setState(75);
    match(CyanaNOAParser::Float);
    setState(76);
    match(CyanaNOAParser::Colon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Noe_assignmentsContext ------------------------------------------------------------------

CyanaNOAParser::Noe_assignmentsContext::Noe_assignmentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CyanaNOAParser::Noe_assignmentContext *> CyanaNOAParser::Noe_assignmentsContext::noe_assignment() {
  return getRuleContexts<CyanaNOAParser::Noe_assignmentContext>();
}

CyanaNOAParser::Noe_assignmentContext* CyanaNOAParser::Noe_assignmentsContext::noe_assignment(size_t i) {
  return getRuleContext<CyanaNOAParser::Noe_assignmentContext>(i);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentsContext::Violated_in() {
  return getToken(CyanaNOAParser::Violated_in, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentsContext::Integer() {
  return getToken(CyanaNOAParser::Integer, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentsContext::Structures_by() {
  return getToken(CyanaNOAParser::Structures_by, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentsContext::Angstrome() {
  return getToken(CyanaNOAParser::Angstrome, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentsContext::Period() {
  return getToken(CyanaNOAParser::Period, 0);
}


size_t CyanaNOAParser::Noe_assignmentsContext::getRuleIndex() const {
  return CyanaNOAParser::RuleNoe_assignments;
}


std::any CyanaNOAParser::Noe_assignmentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CyanaNOAParserVisitor*>(visitor))
    return parserVisitor->visitNoe_assignments(this);
  else
    return visitor->visitChildren(this);
}

CyanaNOAParser::Noe_assignmentsContext* CyanaNOAParser::noe_assignments() {
  Noe_assignmentsContext *_localctx = _tracker.createInstance<Noe_assignmentsContext>(_ctx, getState());
  enterRule(_localctx, 10, CyanaNOAParser::RuleNoe_assignments);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(78);
      noe_assignment();
      setState(81); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == CyanaNOAParser::Simple_name);
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CyanaNOAParser::Violated_in) {
      setState(83);
      match(CyanaNOAParser::Violated_in);
      setState(84);
      match(CyanaNOAParser::Integer);
      setState(85);
      match(CyanaNOAParser::Structures_by);
      setState(86);
      match(CyanaNOAParser::Angstrome);
      setState(87);
      match(CyanaNOAParser::Period);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Noe_assignmentContext ------------------------------------------------------------------

CyanaNOAParser::Noe_assignmentContext::Noe_assignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CyanaNOAParser::Noe_assignmentContext::Simple_name() {
  return getTokens(CyanaNOAParser::Simple_name);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Simple_name(size_t i) {
  return getToken(CyanaNOAParser::Simple_name, i);
}

std::vector<tree::TerminalNode *> CyanaNOAParser::Noe_assignmentContext::Integer() {
  return getTokens(CyanaNOAParser::Integer);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Integer(size_t i) {
  return getToken(CyanaNOAParser::Integer, i);
}

CyanaNOAParser::Numerical_reportContext* CyanaNOAParser::Noe_assignmentContext::numerical_report() {
  return getRuleContext<CyanaNOAParser::Numerical_reportContext>(0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Add_op() {
  return getToken(CyanaNOAParser::Add_op, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Sub_op() {
  return getToken(CyanaNOAParser::Sub_op, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Ok() {
  return getToken(CyanaNOAParser::Ok, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Lone() {
  return getToken(CyanaNOAParser::Lone, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Poor() {
  return getToken(CyanaNOAParser::Poor, 0);
}

tree::TerminalNode* CyanaNOAParser::Noe_assignmentContext::Far() {
  return getToken(CyanaNOAParser::Far, 0);
}


size_t CyanaNOAParser::Noe_assignmentContext::getRuleIndex() const {
  return CyanaNOAParser::RuleNoe_assignment;
}


std::any CyanaNOAParser::Noe_assignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CyanaNOAParserVisitor*>(visitor))
    return parserVisitor->visitNoe_assignment(this);
  else
    return visitor->visitChildren(this);
}

CyanaNOAParser::Noe_assignmentContext* CyanaNOAParser::noe_assignment() {
  Noe_assignmentContext *_localctx = _tracker.createInstance<Noe_assignmentContext>(_ctx, getState());
  enterRule(_localctx, 12, CyanaNOAParser::RuleNoe_assignment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(CyanaNOAParser::Simple_name);
    setState(91);
    match(CyanaNOAParser::Simple_name);
    setState(92);
    match(CyanaNOAParser::Integer);
    setState(93);
    _la = _input->LA(1);
    if (!(_la == CyanaNOAParser::Add_op

    || _la == CyanaNOAParser::Sub_op)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(94);
    match(CyanaNOAParser::Simple_name);
    setState(95);
    match(CyanaNOAParser::Simple_name);
    setState(96);
    match(CyanaNOAParser::Integer);
    setState(97);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 15360) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(98);
    match(CyanaNOAParser::Integer);
    setState(99);
    numerical_report();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Numerical_reportContext ------------------------------------------------------------------
